assert-struct/tests/snapshots/enum_struct_patterns__enum_struct_comparison_failure.snap
---
source: assert-struct/tests/enum_struct_patterns.rs
expression: message
---
assert_struct! failed:

   | Request {
mismatch:
  --> `request.statement.Query.0.limit.Some` (line 31)
   |     statement: Statement::Query(<complex>),
   |                                 ^^^^^^^^^ actual: 25
   | }
