assert-struct/tests/snapshots/enum_struct_patterns__enum_struct_field_mismatch.snap
---
source: assert-struct/tests/enum_struct_patterns.rs
expression: message
---
assert_struct! failed:
expected "select_users" to match "get_items"
