assert-struct/tests/snapshots/enum_struct_patterns__enum_struct_multiple_field_failures.snap
---
source: assert-struct/tests/enum_struct_patterns.rs
expression: message
---
assert_struct! failed: 3 mismatches

   | Request {
mismatch:
  --> `request.statement` (line 30)
   |     statement: Statement::Query(<complex>),
   | }
