assert-struct/tests/snapshots/enum_struct_patterns__enum_struct_variant_nested_mismatch.snap
---
source: assert-struct/tests/enum_struct_patterns.rs
expression: message
---
assert_struct! failed:

   | Request { ... Statement::Execute { ... Query {
mismatch:
  --> `request.statement.query.name` (line 36)
   |     name: "delete_user",
   |           ^^^^^^^^^^^^^ actual: "update_user"
   | } ... } ... }
