assert-struct/tests/snapshots/enum_struct_patterns__enum_variant_wrong_struct.snap
---
source: assert-struct/tests/enum_struct_patterns.rs
expression: message
---
assert_struct! failed:

   | Request {
mismatch:
  --> `request.statement` (line 33)
   |     statement: Statement::Query(Query { name: ... }),
   |                ^^^^^^^^^^^^^^^^ actual: Update(..)
   | }
