assert-struct/tests/snapshots/enum_struct_patterns__nested_option_enum_struct_failure.snap
---
source: assert-struct/tests/enum_struct_patterns.rs
expression: message
---
assert_struct! failed:

   | Container { ... Query {
mismatch:
  --> `container.data.Some.0.Query.0.limit` (line 31)
   |     limit: > 100,
   |            ^^^^^ actual: 10
   | } ... }
